--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,26 +16,9 @@ jobs:
         run: brew install gdal geos udunits gifski pandoc-citeproc imagemagick
       - uses: r-lib/actions/setup-r@master
       - name: Install R packages
-        run: |
-          install.packages("remotes")
-          install.packages(c("devtools","plotly","ggpubr","gifski"))
-          install.packages(c("tidyverse","magick","gganimate","GGally","sf", "ggfortify"))
-          install.packages('maps')
-          install.packages(c("wesanderson","ggmap","rnaturalearth","rnaturalearthdata","rgeos", "ggpubr", "car", "emmeans"))
-          install.packages(c("kableExtra", 'flexdashboard', 'plotly'))
-          remotes::install_github("ropensci/RefManageR")
-          remotes::install_github("yihui/xaringan")
-          remotes::install_github("gadenbuie/xaringanExtra")
-          remotes::install_github("EvaMaeRey/flipbookr")
-          remotes::install_github("ropensci/osmdata")
-          remotes::install_github("allisonhorst/palmerpenguins")
-          remotes::install_github("MarieEtienne/coursesdata")
-          install.packages("leaflet")
-
-
-        shell: Rscript {0}
+        run: Rscript courses_tools/R/install.R
       - name: Generate slides
-        run: Rscript R/render.R
+        run: Rscript courses_tools/R/render.R
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
