--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Install dependencies
-        run: brew install gdal geos udunits gifski pandoc-citeproc imagemagick
+        run: brew install gdal geos udunits gifski imagemagick
       - uses: r-lib/actions/setup-r@master
       - name: Install R packages
         run: Rscript courses_tools/R/install.R
