--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,14 +11,18 @@ jobs:
     runs-on: macos-latest
 
     steps:
+      - name: Checkout repository and submodules
       - uses: actions/checkout@v2
+        with:
+          submodules: recursive
+        uses: textbook/git-checkout-submodule-action@master
       - name: Install dependencies
         run: brew install gdal geos udunits gifski imagemagick
       - uses: r-lib/actions/setup-r@master
       - name: Install R packages
-        run: Rscript courses_tools@cbf0a98/R/install.R
+        run: Rscript courses_tools/R/install.R
       - name: Generate slides
-        run: Rscript courses_tools@cbf0a98/R/render.R
+        run: Rscript courses_tools/R/render.R
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
