--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
         with:
           submodules: recursive
       - name: Install dependencies
-        run: brew install gdal geos udunits gifski imagemagick
+        run: brew install gdal geos udunits pandoc gifski imagemagick
       - uses: r-lib/actions/setup-r@master
       - name: Install R packages
         run: Rscript courses_tools/R/install.R
