--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
           submodules: recursive
       - name: Install dependencies
         run: brew install gdal geos udunits pandoc gifski imagemagick
-      - uses: r-lib/actions/setup-r@main
+      - uses: r-lib/actions/setup-r@v2-branch
       - name: Install R packages
         run: Rscript courses_tools/R/install.R
       - name: Generate slides
