--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,10 +17,8 @@ jobs:
         uses: actions/checkout@v2
         with:
           submodules: recursive
-      - name: Install R packages
-        run: Rscript courses_tools/R/install.R
       - name: Generate slides
-        run: Rscript courses_tools/R/render.R
+        run: Rscript courses_tools/R/render_site.R
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
