--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,8 @@ jobs:
         uses: actions/checkout@v2
         with:
           submodules: recursive
+      - name: Install packages
+        run: Rscript -e "install.packages(c('terra','rnaturalearth', 'rnaturalearthdata'))"   
       - name: Generate slides
         run: Rscript courses_tools/R/render_site.R
       - name: Deploy
